new db rmgController and enhance HTML structure in all-teams-timesheet component

--- a/src/app/features/resource-management/components/all-teams-timesheet/all-teams-timesheet.component.html
+++ b/src/app/features/resource-management/components/all-teams-timesheet/all-teams-timesheet.component.html
@@ -2,6 +2,9 @@
 
 
     <div class="rounded-lg w-full overflow-x-auto">
+
+        <div class="min-w-max">
+
         <!-- Filter Section -->
         <div class="flex items-center gap-4 p-4 bg-white shadow-md rounded-lg">
             <div class="flex items-center gap-2">
@@ -38,8 +41,8 @@
               Clear Dates
             </button>
           </div>
-          
-        <div class="min-w-max">
+          <div class="min-w-max">
+
             <div
                 class="flex flex-wrap items-center justify-between gap-x-2 gap-y-4 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full">
 
@@ -270,7 +273,10 @@
                     All
                     Filters</button>
             </div>
+            </div>
         </div>
+        <div class="rounded-lg w-full inline-block whitespace-nowrap">
+
         <table class="w-full border-collapse border border-gray-300 mt-4">
             <thead>
                 <tr class="bg-gray-100">
@@ -310,6 +316,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
     </div>
 
     <!-- Pagination Controls -->
